--- a/psycopg_c/setup.cfg
+++ b/psycopg_c/setup.cfg
@@ -28,6 +28,7 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     Topic :: Database
     Topic :: Database :: Front-Ends
     Topic :: Software Development
